--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.NotesApp"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.UpdateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SaveActivity"
             android:exported="false" />
         <activity
